rm checkid button in patient page, total rearrange med rec yet again and fix nav bar on small width

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -69,9 +69,15 @@ p {
   max-width: 1024px;
   min-height: 100vh;
   padding: 0;
-  padding-top: 6em;
+  
   background: #ededed;
   margin: 0 auto;
+}
+
+@media (min-width: 768px){
+  .container{
+    padding-top: 6em;
+  }
 }
 
 .ember-application {
@@ -102,9 +108,7 @@ p {
   padding: 15px;
 }
 
-
-/*new-client&new-patient*/
-//isnt this everywhere ? -kristy
+@media (min-width: 768px){
 
 .nav {
   width: 100%;
@@ -127,6 +131,7 @@ p {
   width: 100%;
   height: 7 em;
   z-index: 100
+}
 }
 
 /* view client-info */
