--- a/app/styles/medicalRecord.scss
+++ b/app/styles/medicalRecord.scss
@@ -23,8 +23,8 @@ canvas {
   display: inline;
   width: 50%;
   padding: 0;
-  margin-left: 5px;
-  margin-right: 5px;
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
 
 .checkboxMed {
@@ -41,6 +41,7 @@ canvas {
 
 .medicalTextInput {
   width: 100px;
+  margin-right:.5rem;
 }
 
 .addButton {
@@ -74,6 +75,23 @@ canvas {
 
 .bcsSelect {
   width: 75px;
+}
+
+.leftAlignGroup{
+  margin-left: .5rem;
+}
+
+.notesGroup{
+margin-top: 5rem;
+}
+
+.row{
+  margin-top: 1rem;
+}
+
+.medications{
+  margin-top:1rem;
+  margin-bottom:1rem;
 }
 
 //this is in here because it lives on the medicalRecord page
